<resources>
    <string name="app_name">Favorite Literature</string>
    <string name="app_logo">Логотип создателя</string>

    <!-- AuthorizationFragment -->
    <string name="AuthorizationFragment_TextView_title_Welcome">Добро пожаловать!</string>
    <string name="AuthorizationFragment_TextView_title_Info">Чтобы начать увлекательное путешествие вместе с нами, пожалуйста, авторизуйтесь или зарегистрируйтесь в системе.</string>
    <string name="AuthorizationFragment_EditText_hint_Login">Введите вашу почту</string>
    <string name="AuthorizationFragment_EditText_hint_Password">Введите ваш пароль</string>
    <string name="AuthorizationFragment_Button_text_Auth">Войти в аккаунт</string>
    <string name="AuthorizationFragment_Button_text_Register">Зарегистрироваться</string>

    <!-- RegistrationFragment -->
    <string name="RegistrationFragment_TextView_title_Welcome">Добро пожаловать!</string>
    <string name="RegistrationFragment_TextView_title_Info">Регистрация</string>
    <string name="RegistrationFragment_EditText_hint_UserName">Придумайте никнейм</string>
    <string name="RegistrationFragment_EditText_hint_Login">Введите вашу почту</string>
    <string name="RegistrationFragment_EditText_hint_Password">Введите ваш пароль</string>
    <string name="RegistrationFragment_EditText_hint_PasswordConfirmation">Продублируйте введенный выше пароль</string>
    <string name="RegistrationFragment_Button_text_Register">Зарегистрироваться</string>
    <string name="RegistrationFragment_Button_text_Back">Вернуться назад</string>

    <!-- NavBarMenu -->
    <string name="NavBarMenu_title_ListBooks">Книги</string>
    <string name="NavBarMenu_title_Home">Личный кабинет</string>
    <string name="NavBarMenu_title_ListAuthors">Авторы</string>

    <!-- PersonalAccountFragment -->
    <string name="PersonalAccountFragment_TextView_title_Header">Информация о вас</string>
    <string name="PersonalAccountFragment_EditText_label_UserName">Никнейм:</string>
    <string name="PersonalAccountFragment_TextView_label_Email">E-mail:</string>
    <string name="PersonalAccountFragment_EditText_label_FirstName">Имя:</string>
    <string name="PersonalAccountFragment_EditText_label_LastName">Фамилия:</string>
    <string name="PersonalAccountFragment_EditText_label_Patronymic">Отчество:</string>
    <string name="PersonalAccountFragment_TextView_label_Role">Роль:</string>
    <string name="PersonalAccountFragment_EditText_hint">Введите необходимые данные</string>
    <string name="PersonalAccountFragment_Button_text_LogOut">Выйти из аккаунта</string>

    <!-- BookInfoFragment -->
    <string name="BookInfoFragment_ImageView_image_ImageBook">Обложка книги</string>
    <string name="BookInfoFragment_TextView_label_BookName">Название:</string>
    <string name="BookInfoFragment_TextView_label_AuthorName">Автор:</string>
    <string name="BookInfoFragment_TextView_label_Rating">Оценка:</string>
    <string name="BookInfoFragment_TextView_label_DescriptionBook">Описание:</string>
    <string name="BookInfoFragment_Button_text_Share">Поделиться</string>

    <!-- AuthorFragment -->
    <string name="AuthorFragment_SearchView_hint_SearchAuthor">Поиск автора</string>
    <string name="AuthorFragment_ImageView_image_AuthorPhoto">Фотография автора</string>
    <string name="AuthorFragment_TextView_label_Name">ФИО:</string>
    <string name="AuthorFragment_TextView_label_NickName">Псевдоним:</string>
    <string name="AuthorFragment_TextView_label_BooksList">Произведения:</string>
    <string name="AuthorFragment_TextView_label_Rating">Оценка:</string>
    <string name="AuthorFragment_TextView_label_Description">Описание:</string>
    <string name="AuthorFragment_Button_text_Share">Поделиться</string>
</resources>