<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bigMargin"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/image_auth"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/picture_logo"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AuthorizationFragment_TextView_title_Welcome"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_margin="@dimen/normalMargin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AuthorizationFragment_TextView_title_Info"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_margin="@dimen/normalMargin" />

        <EditText
            android:id="@+id/input_Auth_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AuthorizationFragment_EditText_hint_Login"
            android:textAlignment="center"
            android:autofillHints="username"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            android:inputType="text"
            android:layout_margin="@dimen/halfMargin" />

        <EditText
            android:id="@+id/input_Auth_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AuthorizationFragment_EditText_hint_Password"
            android:textAlignment="center"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_margin="@dimen/halfMargin" />

        <Button
            android:id="@+id/btn_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AuthorizationFragment_Button_text_Auth"
            android:layout_margin="@dimen/bigMargin"
            android:backgroundTint="@color/light_bluish_green" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>