<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="@dimen/bigMargin"
        android:layout_gravity="center"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/picture_logo" />

    <LinearLayout
        android:id="@+id/linearLayout_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bigMargin"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegistrationFragment_TextView_title_Welcome"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_margin="@dimen/normalMargin" />

        <EditText
            android:id="@+id/input_registration_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RegistrationFragment_EditText_hint_UserName"
            android:textAlignment="center"
            android:autofillHints="username"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
            android:layout_margin="@dimen/halfMargin" />

        <EditText
            android:id="@+id/input_registration_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AuthorizationFragment_EditText_hint_Login"
            android:textAlignment="center"
            android:autofillHints="username"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:layout_margin="@dimen/halfMargin" />

        <EditText
            android:id="@+id/input_registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AuthorizationFragment_EditText_hint_Password"
            android:textAlignment="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_margin="@dimen/halfMargin" />

        <EditText
            android:id="@+id/input_registration_passwordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RegistrationFragment_EditText_hint_PasswordConfirmation"
            android:textAlignment="center"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_margin="@dimen/halfMargin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bigMargin"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal|bottom" >

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegistrationFragment_Button_text_Register"
            android:layout_marginHorizontal="@dimen/bigMargin"
            android:backgroundTint="@color/light_bluish_green" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RegistrationFragment_Button_text_Back"
            android:layout_marginHorizontal="@dimen/bigMargin"
            android:backgroundTint="@color/pastel_turquoise" />

    </LinearLayout>
</LinearLayout>